fix application-content horizontal scrolling

--- a/app/stylesheets/base/_layout-blocks.sass
+++ b/app/stylesheets/base/_layout-blocks.sass
@@ -83,6 +83,7 @@ $layout-block-shadow-radius: 3px
   display: flex
   flex-direction: column
   z-index: $content-column-z-index
+  overflow-x: hidden
 
 .application-content-top-panel
   //flex: 2 8 $topPanelHeight
